trunk/Archive/33ba32024a975859b7f81ca0d87f6f69-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:9:13: error: expected primary-expression before ‘int’
      cin << int num;
             ^
main.cpp:9:13: error: expected ‘;’ before ‘int’
main.cpp:10:13: error: ‘num’ was not declared in this scope
     cout << num;
             ^
